gateway.yaml
apiVersion: "xbank/v1beta1"
kind: "Gateway"
metadata:
  name: "ecosystem-alisgidis-services"
  version: "v1"
  minorVersion: "1.4"
  teamName: "A-Team"
spec:
  muhtar: "1.6.6"
  encumen: "1.2.3"
  contextPath: "/alisgidis"
  operations:
  - name: "getAlisgidisCustomerData"
    description: "getAlisgidisCustomerData"
    httpVerb: "POST"
    route: "/get-alisgidis-customer-data"
    target:
      httpVerb: "POST"
      host: "core-nonprelive"
      timeoutInSeconds: 120
      transformationHandledExceptionCodes:
      - "300"
      - "500"
      - 400
      route:
        type: "header"
        value: "RBF_GET_ALISGIDIS_CUSTOMER_DATA"
    transformation:
      request:
        filepath: "/alisgidis/getAlisgidisCustomerData/request.mjs"
        type: "middleware"
        timeoutInMilliSeconds: 4000
      response:
        filepath: "/alisgidis/getAlisgidisCustomerData/response.mjs"
        type: "middleware"
        timeoutInMilliSeconds: 4000
    authorization:
      enabled: true
  transformationRepo:
    url: "https://github.com/coskunalkayasavana/apigw-ecosystem-alisgidis-services"
    tag: "v1.0.0"
